--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main # Trigger only on pushes to the 'main' branch
+      - master # Trigger only on pushes to the 'main' branch
 
 jobs:
   deploy:
@@ -19,5 +19,5 @@ jobs:
           port: 22
           script: |
             cd worker
-            git pull origin main
+            git pull origin master
             docker-compose up -d --build
